--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -145,5 +145,10 @@
       font-weight: 600;
       font-size: 16px;
     }
+
+    @media (max-width: 819px) {
+      margin-top: 15px;
+      padding: 7px 20px;
+    }
   }
 }
