--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -2,6 +2,9 @@
 
 .sort {
   position: relative;
+  @media (max-width: 1050px) {
+    margin-top: 30px;
+  }
   &__label {
     display: flex;
     align-items: center;
