--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -146,9 +146,11 @@
       font-size: 16px;
     }
 
-    @media (max-width: 819px) {
-      margin-top: 15px;
+    @media (max-width: 1179px) {
       padding: 7px 20px;
+    }
+    @media (max-width: 767px) {
+      margin-top: 10px;
     }
   }
 }
